--- a/app/assets/stylesheets/nav.scss
+++ b/app/assets/stylesheets/nav.scss
@@ -1,5 +1,5 @@
 .nav-bar {
-    border: 1px solid black;
+    border-bottom: 1px solid grey;
     display: flex;
     justify-content: space-between;
     align-items: flex-end;
