--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,10 @@
     <%= javascript_include_tag 'application' %>
   </head>
 
+  <% if current_user %>
+  <script>window.currentUser = {"username": <%= current_user.username%>, "email": <%= current_user.email%>, "id": <%=current_user.id%>}</script>
+  <%end%>
+  
   <body>
     <%= yield %>
   </body>
