--- a/app/assets/stylesheets/nav.scss
+++ b/app/assets/stylesheets/nav.scss
@@ -1,16 +1,19 @@
 .nav-bar {
-    border-bottom: 1px solid grey;
     display: flex;
     justify-content: space-between;
     align-items: flex-end;
     min-height: 40px;
-    padding: 10px;
+    padding: 20px;
 }
+.nav-bar:hover {
+    border-bottom: 1px solid grey;
+}
+
 .nav-links {
     display: flex;
     justify-content: space-between;
     align-items: flex-end;
-    width: 20%;
+    width: 120px;
     padding: 5px;
     color: rgb(56, 59, 59);
 }
@@ -28,13 +31,14 @@
     border-radius: 5px;
 }
 .main-logo {
-    // color: orangered;
     font-size: 30px;
-    background-color: #f5c907;
-    background-image: linear-gradient( #f3f3ea, #eed461);
-    background-size: 100%;
-    -webkit-background-clip: text;
-    -moz-background-clip: text;
-    -webkit-text-fill-color: transparent; 
-    -moz-text-fill-color: transparent;
+    color: rgb(218, 60, 3);
+    font-family: "Neue plak";
+    text-decoration: none;
+    // background-image: linear-gradient( #f3f3ea, #eed461);
+    // background-size: 100%;
+    // -webkit-background-clip: text;
+    // -moz-background-clip: text;
+    // -webkit-text-fill-color: transparent; 
+    // -moz-text-fill-color: transparent;
 }
