Fix refresh bug

--- a/app/assets/stylesheets/nav.scss
+++ b/app/assets/stylesheets/nav.scss
@@ -23,13 +23,30 @@
     padding: 5px;
     text-decoration: none;
 }
+.logout-button {
+    color: darkslategrey;
+    padding: 5px;
+    text-decoration: none;
+    border: none;
+    background-color: transparent;  
+    width: fit-content;
+}
 
 .nav-links > *:hover {
     background: rgb(217, 230, 238);
     color: darkslategrey;
     padding: 5px;
     border-radius: 5px;
+    cursor: pointer;
 }
+.logout-button:hover {
+    background: rgb(217, 230, 238);
+    color: darkslategrey;
+    padding: 5px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
 .main-logo {
     font-size: 30px;
     color: rgb(218, 60, 3);
@@ -41,4 +58,16 @@
     // -moz-background-clip: text;
     // -webkit-text-fill-color: transparent; 
     // -moz-text-fill-color: transparent;
+}
+
+.header-group {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+
+.header-name {
+    font-family: "Neue plak";
+    padding-bottom: 8px;
 }
