--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,12 +7,19 @@
 
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
-  </head>
 
   <% if current_user %>
-  <script>window.currentUser = {"username": <%= current_user.username%>, "email": <%= current_user.email%>, "id": <%=current_user.id%>}</script>
+  <script>
+  window.currentUser = {
+    "username": "<%= current_user.username%>", 
+    "email": "<%= current_user.email%>", 
+    "id": "<%=current_user.id%>"
+    }
+    </script>
   <%end%>
-  
+  </head>
+
+
   <body>
     <%= yield %>
   </body>
