Render hero image splash

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,9 @@
     </script>
   <%end%>
   </head>
-
+  <script>
+    window.mainLogo = "<%= image_url('beer-wall.jpg')%>"
+  </script>
 
   <body>
     <%= yield %>
