--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,8 +18,9 @@
     </script>
   <%end%>
   </head>
+
   <script>
-    window.mainLogo = "<%= image_url('beer-wall.jpg')%>"
+    window.mainLogo = "<%= image_url('beers-cheers-cocktails.jpg')%>"
   </script>
 
   <body>
