--- a/app/assets/stylesheets/events.scss
+++ b/app/assets/stylesheets/events.scss
@@ -7,18 +7,33 @@
 
 .index-header {
     display: flex;
-    // flex-direction: column;
-    justify-content: center;
-    // grid-template-columns: auto 400px;
-    margin: 20px;
-    height: 230px;
+    // justify-content: center;
+    box-sizing: border-box;
+    // margin: 20px;
+    height: 250px;
+    width: 800px;
     position: relative;
+}
+
+.index-header-main {
+    align-self: flex-start;
+    height: 220px;
+    width: 770px;
 }
 
 .index-header-content {
     display: flex;
+    justify-content: space-between;
+    width: 800px;
+    justify-self: flex-start;
+}
+
+.index-header-content-text {
+    display: flex;
+    flex-wrap: wrap;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
 }
 
 .index-header-top {
@@ -32,9 +47,21 @@
     font-size: 36px;
 }
 
+.event-create-arrow {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    z-index: 2;
+    background-color: var(--main-orange);
+    border-radius: 100px;
+    padding: 18px;
+    color: #fff;
+    margin-top: 15px;
+}   
+
 .index-header-img {
-    width: 400px;
-    height: auto;
+    // width: 400px;
+    height: 240px;
     z-index: 1;
     align-self: flex-end;
 }
@@ -45,15 +72,58 @@
     background-color: #f6f7fd;
     width: 800px;
     z-index: 0;
+    align-self: flex-end;
 }
 
 .event-feed-title {
+    margin-top: 20px;
     font-size: 24px;
 }
 
 .event-feed {
     display: grid;
-    grid-template-columns: repeat(3, minmax(0, 1fr));
-    padding: 10px;
+    grid-template-columns: repeat(3, 33.33%);
+    grid-template-rows: repeat(4, 20%);
+    padding: 20px;
+}
+
+.event-item {
+    display: flex;
+    flex-direction: column;
+    box-sizing: border-box;
+    justify-content: space-between;
+    // height: 180px;
+    text-decoration: none;
+}
+
+.event-item:hover {
+    display: flex;
+    flex-direction: column;
+    cursor: pointer;
+    padding: 20px;
+    box-sizing: border-box;
+    box-shadow: 0 12px 20px rgb(207, 207, 212);
+    // border-radius: 4px;
+    // border-top-left-radius: 4px;
+    // border-top-right-radius: 4px;
+    // border-bottom-right-radius: 4px;
+    // border-bottom-left-radius: 4px;
+}
+
+.event-item > * {
+    // text-decoration: none;
+    font-family: "neue-plak";
+    color: rgb(56, 59, 59);
+    font-size: 20px;
+    padding: 20px;
+    margin: 20px;
+}
+
+.event-item-date {
+    color: var(--main-orange)
+}
+
+.event-item-image {
+    border: solid rgb(207, 207, 212) 1px;
 }
 
