--- a/app/assets/stylesheets/events.scss
+++ b/app/assets/stylesheets/events.scss
@@ -127,3 +127,16 @@
     border: solid rgb(207, 207, 212) 1px;
 }
 
+.loader {
+    border: 16px solid #f3f3f3;
+    border-top: 16px solid #3408db;
+    border-radius: 50%;
+    width: 120px;
+    height: 120px;
+    animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+    0% {transform: rotate(0deg);}
+    100% {transform: rotate(360deg);}
+}
