--- a/app/assets/stylesheets/events.scss
+++ b/app/assets/stylesheets/events.scss
@@ -83,8 +83,9 @@
 .event-feed {
     display: grid;
     grid-template-columns: repeat(3, 33.33%);
-    grid-template-rows: repeat(4, 20%);
+    grid-template-rows: 1fr 1fr 1fr 1fr;
     padding: 20px;
+    width: 100%;
 }
 
 .event-item {
@@ -92,15 +93,16 @@
     flex-direction: column;
     box-sizing: border-box;
     justify-content: space-between;
-    // height: 180px;
+    height: 300px;
     text-decoration: none;
+    width: 100%;
+    height: 100%;
 }
 
 .event-item:hover {
     display: flex;
     flex-direction: column;
     cursor: pointer;
-    padding: 20px;
     box-sizing: border-box;
     box-shadow: 0 12px 20px rgb(207, 207, 212);
     // border-radius: 4px;
@@ -114,9 +116,9 @@
     // text-decoration: none;
     font-family: "neue-plak";
     color: rgb(56, 59, 59);
-    font-size: 20px;
-    padding: 20px;
-    margin: 20px;
+    font-size: 1rem;
+    padding: .5rem;
+    // margin: 20px;
 }
 
 .event-item-date {
@@ -125,6 +127,9 @@
 
 .event-item-image {
     border: solid rgb(207, 207, 212) 1px;
+    width: 100%;
+    max-height: 250px;
+    object-fit: contain;
 }
 
 .loader {
