create event show page and tweak event index

--- a/app/assets/stylesheets/api/events.scss
+++ b/app/assets/stylesheets/api/events.scss
@@ -1,3 +1,152 @@
-// Place all the styles related to the api/events controller here.
+// Place all the styles related to the events controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.event-show {
+    margin: 20px;
+}
+
+.index-header {
+    display: flex;
+    // justify-content: center;
+    box-sizing: border-box;
+    // margin: 20px;
+    height: 250px;
+    width: 800px;
+    position: relative;
+}
+
+.index-header-main {
+    align-self: flex-start;
+    height: 220px;
+    width: 770px;
+}
+
+.index-header-content {
+    display: flex;
+    justify-content: space-between;
+    width: 800px;
+    justify-self: flex-start;
+}
+
+.index-header-content-text {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.index-header-top {
+    z-index: 2;
+    color: var(--main-orange);
+    font-size: 24px;
+}
+
+.event-create-link {
+    z-index: 2;
+    font-size: 36px;
+}
+
+.event-create-arrow {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    z-index: 2;
+    background-color: var(--main-orange);
+    border-radius: 100px;
+    padding: 18px;
+    color: #fff;
+    margin-top: 15px;
+}   
+
+.index-header-img {
+    width: 400px;
+    // height: 240px;
+    // width: 100%;
+    // max-width: 600px;
+    z-index: 1;
+    align-self: flex-end;
+}
+
+.index-header-bgbox {
+    position: absolute;
+    height: 220px;
+    background-color: #f6f7fd;
+    width: 800px;
+    z-index: 0;
+    align-self: flex-end;
+}
+
+.event-feed-title {
+    margin-top: 20px;
+    font-size: 24px;
+}
+
+.event-feed {
+    display: grid;
+    box-sizing: border-box;
+    grid-template-columns: repeat(3, 33.33%);
+    grid-template-rows: 1fr 1fr 1fr 1fr;
+    padding: 20px;
+    width: 100%;
+}
+
+.event-item {
+    display: flex;
+    flex-direction: column;
+    box-sizing: border-box;
+    justify-content: space-between;
+    height: 300px;
+    text-decoration: none;
+    width: 100%;
+    height: 100%;
+    // box-shadow: 0 16px 64px -16px rgb(46, 55, 77);
+}
+
+.event-item:hover {
+    display: flex;
+    flex-direction: column;
+    cursor: pointer;
+    box-sizing: border-box;
+    box-shadow: 0 12px 20px rgb(207, 207, 212);
+    // border-radius: 4px;
+    // border-top-left-radius: 4px;
+    // border-top-right-radius: 4px;
+    // border-bottom-right-radius: 4px;
+    // border-bottom-left-radius: 4px;
+}
+
+.event-item > * {
+    // text-decoration: none;
+    font-family: "neue-plak";
+    color: rgb(56, 59, 59);
+    font-size: 1rem;
+    padding: .5rem;
+    margin: 10px;
+}
+
+.event-item-date {
+    color: var(--main-orange)
+}
+
+.event-item-image {
+    border: solid rgb(207, 207, 212) 1px;
+    width: 100%;
+    max-height: 250px;
+    object-fit: contain;
+    box-sizing: border-box;
+}
+
+.loader {
+    border: 16px solid #f3f3f3;
+    border-top: 16px solid #3408db;
+    border-radius: 50%;
+    width: 120px;
+    height: 120px;
+    animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+    0% {transform: rotate(0deg);}
+    100% {transform: rotate(360deg);}
+}
