--- a/app/assets/stylesheets/api/events.scss
+++ b/app/assets/stylesheets/api/events.scss
@@ -1,8 +1,8 @@
 // Place all the styles related to the events controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-.event-show {
-    margin: 20px;
+.event-page {
+    margin: 40px;
 }
 
 .index-header {
@@ -77,13 +77,22 @@
     align-self: flex-end;
 }
 
+.index-header-bottom {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+}
+
 .event-feed-title {
     margin-top: 20px;
     font-size: 24px;
+    align-self: flex-start;
 }
 
 .event-feed {
     display: grid;
+    grid-gap: 20px;
     box-sizing: border-box;
     grid-template-columns: repeat(3, 33.33%);
     grid-template-rows: 1fr 1fr 1fr 1fr;
@@ -100,7 +109,7 @@
     text-decoration: none;
     width: 100%;
     height: 100%;
-    // box-shadow: 0 16px 64px -16px rgb(46, 55, 77);
+    box-shadow: 0 16px 64px 36px rgba(231, 231, 236, 10);
 }
 
 .event-item:hover {
@@ -108,7 +117,7 @@
     flex-direction: column;
     cursor: pointer;
     box-sizing: border-box;
-    box-shadow: 0 12px 20px rgb(207, 207, 212);
+    box-shadow: 0 16px 64px -16px rgb(43, 51, 71);
     // border-radius: 4px;
     // border-top-left-radius: 4px;
     // border-top-right-radius: 4px;
@@ -122,7 +131,7 @@
     color: rgb(56, 59, 59);
     font-size: 1rem;
     padding: .5rem;
-    margin: 10px;
+    // margin: 10px;
 }
 
 .event-item-date {
@@ -130,23 +139,37 @@
 }
 
 .event-item-image {
-    border: solid rgb(207, 207, 212) 1px;
+    border: solid rgb(219, 219, 224) 1px;
     width: 100%;
     max-height: 250px;
     object-fit: contain;
     box-sizing: border-box;
 }
 
+.loader-container {
+    background: transparent;
+    width: 100%;
+    height: 100%; 
+}
 .loader {
+    position: absolute;
+    left: 50%;
+    top: 35%;
     border: 16px solid #f3f3f3;
-    border-top: 16px solid #3408db;
+    border-top: 16px solid var(--main-orange);
     border-radius: 50%;
-    width: 120px;
-    height: 120px;
+    z-index: 1000;
+    width: 60px;
+    height: 60px;
     animation: spin 2s linear infinite;
 }
 
 @keyframes spin {
     0% {transform: rotate(0deg);}
     100% {transform: rotate(360deg);}
+}
+
+.list-item {
+    padding: 10px;
+    box-sizing: border-box;
 }
