--- a/app/assets/stylesheets/api/event_show.scss
+++ b/app/assets/stylesheets/api/event_show.scss
@@ -12,7 +12,6 @@
 }
 
 .event-show-top {
-    display: flex;
     box-sizing: border-box;
     // grid-template-columns: 3fr 2fr;
     // border: 20px solid rgba(95, 23, 68, 0.349);
@@ -26,6 +25,7 @@
 }
 
 .event-show-side {
+    position: absolute;
     height: 500px;
 }
 
@@ -43,11 +43,18 @@
 
 .event-show-bottom {
     display: flex;
-    flex-direction: column;
+    // flex-direction: column;
     justify-content: space-between;
     border-top: solid rgb(180, 180, 185) 1px;
+    padding: 30px;
     box-sizing: border-box;
     background-color: white;
+}
+
+.bottom-left {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
 }
 
 .event-show-title {
