--- a/app/assets/stylesheets/api/event_show.scss
+++ b/app/assets/stylesheets/api/event_show.scss
@@ -12,6 +12,7 @@
 }
 
 .event-show-top {
+    display: flex;
     box-sizing: border-box;
     // grid-template-columns: 3fr 2fr;
     // border: 20px solid rgba(95, 23, 68, 0.349);
@@ -24,16 +25,14 @@
     // margin: 30px;
 }
 
-.event-show-side {
-    position: absolute;
-    height: 500px;
-}
-
 .top-side {
+    // position: absolute;
+    height: 500px;
     padding: 30px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
+    // display: flex;
+    // flex-direction: column;
+    // justify-content: space-around;
+    display: block;
     background-color: rgba(245, 243, 243, 0.89);
 }
 
@@ -41,12 +40,25 @@
     // justify-self: flex-start;
 }
 
+.event-show-mid {
+    width: 100%;
+    background-color: white;
+    display: flex;
+    justify-content: flex-end;
+}
+
+.rsvp-button {
+    min-width: 300px;
+    min-height: 50px;
+    background-color: green;
+}
+
 .event-show-bottom {
     display: flex;
     // flex-direction: column;
-    justify-content: space-between;
+    // justify-content: space-between;
     border-top: solid rgb(180, 180, 185) 1px;
-    padding: 30px;
+    padding: 50px 30px 30px 30px;
     box-sizing: border-box;
     background-color: white;
 }
@@ -55,6 +67,17 @@
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
+    margin-bottom: 30px;
+    box-sizing: border-box;
+}
+
+.bottom-right {
+    display: flex;
+    flex-direction: column;
+    box-sizing: border-box;
+    margin-left: 8.3333333333%;
+    width: 33.3333333333%;
+
 }
 
 .event-show-title {
