--- a/app/assets/stylesheets/api/event_show.scss
+++ b/app/assets/stylesheets/api/event_show.scss
@@ -27,7 +27,7 @@
 
 .top-side {
     // position: absolute;
-    height: 500px;
+    max-height: 500px;
     padding: 30px;
     // display: flex;
     // flex-direction: column;
@@ -37,7 +37,7 @@
 }
 
 .event-show-date {
-    // justify-self: flex-start;
+
 }
 
 .event-show-mid {
@@ -45,18 +45,23 @@
     background-color: white;
     display: flex;
     justify-content: flex-end;
+    position: sticky; top: 0px;
 }
 
 .rsvp-button {
-    min-width: 300px;
-    min-height: 50px;
+    min-width: 200px;
+    min-height: 40px;
     background-color: green;
+    margin: 20px;
+    border-radius: 5px;
+    color: white;
 }
 
 .event-show-bottom {
     display: flex;
     // flex-direction: column;
     // justify-content: space-between;
+    height: 800px;
     border-top: solid rgb(180, 180, 185) 1px;
     padding: 50px 30px 30px 30px;
     box-sizing: border-box;
