--- a/app/assets/stylesheets/nav.scss
+++ b/app/assets/stylesheets/nav.scss
@@ -71,4 +71,7 @@
 .header-name {
     font-family: "Neue plak";
     padding-bottom: 8px;
+    text-decoration: none;
+    color: rgb(31, 30, 30);
+    font-size: 24px;
 }
