Add demo user button

--- a/app/assets/stylesheets/api/users.scss
+++ b/app/assets/stylesheets/api/users.scss
@@ -4,3 +4,10 @@
 .profile-container {
     margin: 40px;
 }
+
+.events-attending {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+}
