--- a/app/assets/stylesheets/api/event_create.scss
+++ b/app/assets/stylesheets/api/event_create.scss
@@ -22,6 +22,11 @@
     box-sizing: border-box;
 }
 
+.basic-instructions {
+    color: rgb(109, 109, 109);
+    font-weight: 200;
+}
+
 .basic-info > * {
     padding: 10px;
 }
