--- a/app/assets/stylesheets/api/events.scss
+++ b/app/assets/stylesheets/api/events.scss
@@ -6,26 +6,30 @@
 }
 
 .index-header {
-    display: flex;
+    // display: flex;
     // justify-content: center;
     box-sizing: border-box;
     // margin: 20px;
-    height: 250px;
-    width: 800px;
+    height: fit-content;
+    // width: 800px;
+    width: 100%;
     position: relative;
 }
 
 .index-header-main {
-    align-self: flex-start;
-    height: 220px;
-    width: 770px;
+    // align-self: flex-start;
+    height: fit-content;
+    // width: 770px;
+    width: 100%;
 }
 
 .index-header-content {
     display: flex;
     justify-content: space-between;
-    width: 800px;
-    justify-self: flex-start;
+    height: fit-content;
+    // width: 800px;
+    width: 100%;
+    // justify-self: flex-start;
 }
 
 .index-header-content-text {
@@ -33,7 +37,8 @@
     flex-wrap: wrap;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
+    margin-right: 32px;
 }
 
 .index-header-top {
@@ -60,21 +65,58 @@
 }   
 
 .index-header-img {
-    width: 400px;
-    // height: 240px;
-    // width: 100%;
-    // max-width: 600px;
+    width: 250px;
     z-index: 1;
-    align-self: flex-end;
+    // align-self: flex-end;
+}
+
+@media (min-width: 480px) {
+    .index-header-img {
+    //   height: 233px;
+      width: 300px;
+    }
+}
+
+@media (min-width: 660px) {
+    .index-header-img {
+    //   height: 330px;
+      width: 350px;
+    }
+}
+
+@media (min-width: 792px) {
+    .index-header-img {
+      width: 400px;
+    }
+}
+
+@media (min-width: 960px) {
+    .index-header-img {
+      width: 480px;
+    }
+}
+
+@media (min-width: 1080px) {
+    .index-header-img {
+      width: 560px;
+    }
+}
+
+@media (min-width: 1152px) {
+    .index-header-img {
+      width: 640px;
+    }
 }
 
 .index-header-bgbox {
     position: absolute;
-    height: 220px;
+    height: 80%;
+    left: 5%;
+    top: 10%;
     background-color: #f6f7fd;
     width: 800px;
     z-index: 0;
-    align-self: flex-end;
+    // align-self: flex-end;
 }
 
 .index-header-bottom {
@@ -86,17 +128,17 @@
 
 .event-feed-title {
     margin-top: 20px;
+    margin-bottom: 30px;
     font-size: 24px;
     align-self: flex-start;
 }
 
 .event-feed {
     display: grid;
-    grid-gap: 20px;
+    grid-gap: 32px;
     box-sizing: border-box;
-    grid-template-columns: repeat(3, 33.33%);
+    grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr 1fr;
-    padding: 20px;
     width: 100%;
 }
 
@@ -105,11 +147,11 @@
     flex-direction: column;
     box-sizing: border-box;
     justify-content: space-between;
-    height: 300px;
+    height: 360px;
     text-decoration: none;
     width: 100%;
-    height: 100%;
-    box-shadow: 0 16px 64px 36px rgba(231, 231, 236, 10);
+    // height: 100%;
+    box-shadow: 0 16px 64px 16px rgba(231, 231, 236, 10);
 }
 
 .event-item:hover {
@@ -117,7 +159,7 @@
     flex-direction: column;
     cursor: pointer;
     box-sizing: border-box;
-    box-shadow: 0 16px 64px -16px rgb(43, 51, 71);
+    box-shadow: 0 16px 64px -16px rgba(43, 51, 71, 06);
     // border-radius: 4px;
     // border-top-left-radius: 4px;
     // border-top-right-radius: 4px;
@@ -125,12 +167,11 @@
     // border-bottom-left-radius: 4px;
 }
 
-.event-item > * {
+.event-item-body > * {
     // text-decoration: none;
     font-family: "neue-plak";
     color: rgb(56, 59, 59);
     font-size: 1rem;
-    padding: .5rem;
     // margin: 10px;
 }
 
@@ -141,9 +182,22 @@
 .event-item-image {
     border: solid rgb(219, 219, 224) 1px;
     width: 100%;
-    max-height: 250px;
-    object-fit: contain;
+    max-height: 180px;
+    height: 180px;
+    object-fit: cover;
     box-sizing: border-box;
+}
+
+.event-item-body {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 100%;
+    height: 180px;
+    padding: 24px 16px;
+    box-sizing: border-box;
+    overflow: hidden;
+    background: white;
 }
 
 .loader-container {
@@ -169,7 +223,7 @@
     100% {transform: rotate(360deg);}
 }
 
-.list-item {
-    padding: 10px;
-    box-sizing: border-box;
-}
+// .list-item {
+//     padding: 10px;
+//     box-sizing: border-box;
+// }
