--- a/app/assets/stylesheets/api/users.scss
+++ b/app/assets/stylesheets/api/users.scss
@@ -11,3 +11,12 @@
     align-items: center;
     width: 100%;
 }
+
+.rsvp-feed {
+    display: grid;
+    grid-gap: 20px;
+    box-sizing: border-box;
+    grid-template-columns: repeat(3, 33.33%);
+    grid-template-rows: 1fr;
+    overflow: scroll;
+}
