--- a/app/assets/stylesheets/nav.scss
+++ b/app/assets/stylesheets/nav.scss
@@ -3,7 +3,7 @@
     justify-content: space-between;
     align-items: center;
     height: 72px;
-    padding: 20px;
+    padding: 0px 20px;
     box-sizing: border-box;
     box-shadow: 0px 0px 32px 12px rgba(0, 0, 0, 0.05);
 }
@@ -25,46 +25,70 @@
     padding: 5px;
     text-decoration: none;
 }
+
 .logout-button {
     color: darkslategrey;
-    padding: 5px;
+    height: 72px;
     text-decoration: none;
     border: none;
     background-color: transparent;  
-    width: fit-content;
-    margin-top: 3px;
+    // margin-top: 3px;
     margin-right: 16px;
+    padding: 0px 12px;
+}
+
+.nav-create-submit {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 72px;
+    box-sizing: border-box;
+    text-decoration: none;
+    color: var(--main-orange);
+    font-size: 14px;
+    font-family: "Neue plak thin";
+    margin-right: 18px;
+    padding: 0px 12px;
+}
+
+.nav-create-submit:hover {
+    background: rgb(217, 230, 238);
+    // color: white;
+    // margin-top: 3px;
+    // margin-right: 20px;
+    // padding: 5px;
+  
+    cursor: pointer;
 }
 
 .nav-links > *:hover {
     background: rgb(217, 230, 238);
     color: darkslategrey;
+    margin-top: 3px;
+    margin-right: 18px;
     padding: 5px;
-    border-radius: 5px;
     cursor: pointer;
 }
 .logout-button:hover {
     background: rgb(217, 230, 238);
     color: darkslategrey;
-    padding: 5px;
-    border-radius: 5px;
     cursor: pointer;
-    margin-top: 3px;
+    // margin-top: 3px;
     // margin-right: 16px;
 
 }
 
 .main-logo {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     font-size: 30px;
     color: var(--main-orange);
     font-family: "Neue plak";
     text-decoration: none;
-    // background-image: linear-gradient( #f3f3ea, #eed461);
-    // background-size: 100%;
-    // -webkit-background-clip: text;
-    // -moz-background-clip: text;
-    // -webkit-text-fill-color: transparent; 
-    // -moz-text-fill-color: transparent;
+    height: 72px;
+    margin-top: -3px;
 }
 
 .header-group {
@@ -74,23 +98,37 @@
     // justify-content: space-between;
 }
 
-
 .header-name {
+    display: flex;
+    align-items: center;
     font-family: "Neue plak";
-    padding: 5px 5px 8px 5px;
+    // padding: 5px 5px 8px 5px;
+    height: 72px;
     text-decoration: none;
-    color: rgb(61, 59, 59);
+    color: darkslategray;
     font-size: 16px;
+    padding-left: 12px;
 }
 
 .header-name:hover {
     background: rgb(217, 230, 238);
     color: darkslategrey;
-    padding: 5px 5px 8px 5px;
-    border-radius: 5px;
+    // padding: 5px 5px 8px 5px;
+    // border-radius: 5px;
     cursor: pointer;
 }
 
 .header-name:active {
 
 }
+
+@media (max-width: 680px) {
+    .nav-create-submit {
+      display: none;
+    }
+}
+
+.user-icon {
+    margin-right: 8px;
+}
+
