--- a/app/assets/stylesheets/nav.scss
+++ b/app/assets/stylesheets/nav.scss
@@ -27,6 +27,10 @@
 }
 
 .logout-button {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     color: darkslategrey;
     height: 72px;
     text-decoration: none;
