--- a/app/assets/stylesheets/api/events.scss
+++ b/app/assets/stylesheets/api/events.scss
@@ -113,7 +113,7 @@
     height: 80%;
     left: 5%;
     top: 10%;
-    background-color: #f6f7fd;
+    background-color: #eaecf8;
     width: 800px;
     z-index: 0;
     // align-self: flex-end;
