--- a/app/assets/stylesheets/api/users.scss
+++ b/app/assets/stylesheets/api/users.scss
@@ -5,11 +5,7 @@
     margin: 40px;
     display: flex;
     flex-direction: column;
-    height: 100vh;
-}
-
-.profile-box {
-    height: 50vh;
+    // height: 100vh;
 }
 
 .page-header {
@@ -17,6 +13,41 @@
     padding: 3px;
     border-bottom: 1px solid lightgray;
     margin: 5px;
+}
+
+.profile-box {
+    min-height: 200px;
+}
+
+.account-info, .account-photo {
+    height: 50%;
+    display: flex;
+    flex-direction: column;
+    // justify-content: space-around;
+}
+
+.user-email, .account-photo {
+    margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 50vh;
+}
+
+// .account-photo {
+//     height: 50%
+//     display: flex;
+//     flex-direction: column;
+// }
+
+.event-show-img {
+    border: 1px solid darkslategray; 
+    min-height: 200px;
+    min-width: 100px;
+    max-width: 200px;
+}
+.account-header {
+    font-size: 24px;
 }
 
 .events-attending {
@@ -34,17 +65,18 @@
     grid-template-columns: repeat(3, 33.33%);
     grid-template-rows: 1fr;
     overflow: scroll;
+    margin-top: 20px;
 }
 
 .feed-header {
     font-size: 24px;
-    margin: 18px;
+    margin: 5px 5px 20px 5px;
     align-self: flex-start;
 }
 
 .user-create-button-container {
     height: fit-content;
-    margin: 40px;
+    padding: 40px 40px 0px 40px;
 }
 
 .events-created {
