--- a/app/assets/stylesheets/api/event_show.scss
+++ b/app/assets/stylesheets/api/event_show.scss
@@ -18,6 +18,7 @@
     // border: 20px solid rgba(95, 23, 68, 0.349);
     justify-content: center;
     margin-top: 40px;
+    width: 100%;
 }
 
 .event-show-img {
