--- a/app/assets/stylesheets/api/users.scss
+++ b/app/assets/stylesheets/api/users.scss
@@ -16,24 +16,33 @@
 }
 
 .profile-box {
-    min-height: 200px;
+    min-height: 150px;
+    // max-height: fit-content;
+    border-bottom: 1px solid lightgray;
 }
 
-.account-info, .account-photo {
-    height: 50%;
+.account-info {
+    // height: 10%;
     display: flex;
     flex-direction: column;
     // justify-content: space-around;
 }
 
-.user-email, .account-photo {
+.user-email{
     margin-top: 20px;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-    height: 50vh;
+    justify-content: space-evenly;
+    height: 10vh;
 }
 
+.account-photo {
+    margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    height: 30vh;
+}
 // .account-photo {
 //     height: 50%
 //     display: flex;
@@ -48,6 +57,7 @@
 }
 .account-header {
     font-size: 24px;
+    margin-bottom: 20px;
 }
 
 .events-attending {
