--- a/app/assets/stylesheets/nav.scss
+++ b/app/assets/stylesheets/nav.scss
@@ -24,7 +24,7 @@
     color: darkslategrey;
     padding: 5px;
     text-decoration: none;
-    height: 72px;
+    // height: 72px;
     margin-right: 18px;
     margin-top: 30px;
 }
