--- a/app/assets/stylesheets/api/users.scss
+++ b/app/assets/stylesheets/api/users.scss
@@ -10,13 +10,17 @@
 
 .page-header {
     font-size: 36px;
-    padding: 3px;
+    padding: 3px 3px 50px 3px;
     border-bottom: 1px solid lightgray;
     margin: 5px;
 }
 
 .profile-box {
     min-height: 150px;
+    height: fit-content;
+    box-sizing: border-box;
+    overflow: auto;
+    padding-bottom: 50px;
     // max-height: fit-content;
     border-bottom: 1px solid lightgray;
 }
@@ -31,6 +35,7 @@
 .user-email{
     margin-top: 20px;
     display: flex;
+    box-sizing: border-box;
     flex-direction: column;
     justify-content: space-evenly;
     height: 10vh;
@@ -38,6 +43,7 @@
 
 .account-photo {
     margin-top: 20px;
+    box-sizing: border-box;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
@@ -55,6 +61,7 @@
     min-width: 100px;
     max-width: 200px;
 }
+
 .account-header {
     font-size: 24px;
     margin-bottom: 20px;
@@ -96,4 +103,10 @@
     width: 100%;
     margin-top: 40px;
     min-height: 400px;
+}
+
+.events-created-feed {
+    display: grid;
+    grid-template-rows: 360px;
+    gap: 20px;
 }
