--- a/app/assets/stylesheets/nav.scss
+++ b/app/assets/stylesheets/nav.scss
@@ -14,6 +14,7 @@
 .nav-links {
     display: flex;
     // justify-content: center;
+    // height: 72px;
     align-items: center;
     width: 121px;
     padding: 5px;
@@ -24,7 +25,7 @@
     color: darkslategrey;
     padding: 5px;
     text-decoration: none;
-    // height: 72px;
+    height: 72px;
     margin-right: 18px;
     margin-top: 30px;
 }
