--- a/app/assets/stylesheets/api/events.scss
+++ b/app/assets/stylesheets/api/events.scss
@@ -217,7 +217,20 @@
     height: 50px;
     animation: spin 2s linear infinite;
 }
-
+// .spinner {
+//     position: absolute;
+//     left: 44vw;
+//     top: 40vh;
+//     border: 15px solid var(--mid-dark);
+//     border-top: 16px solid var(--mid-blue);
+//     border-radius: 50%;
+//     width: 120px;
+//     height: 120px;
+//     margin: 25px;
+//     animation: spinner 900ms linear infinite;
+//     z-index: 1000;
+//     // align-self: center;
+//   }
 @keyframes spin {
     0% {transform: rotate(0deg);}
     100% {transform: rotate(360deg);}
