fix splash button create event funciton and display style

--- a/app/assets/stylesheets/api/event_create.scss
+++ b/app/assets/stylesheets/api/event_create.scss
@@ -1,18 +1,39 @@
 .event-form-container {
+    position: absolute;
     display: flex;
     flex-direction: column;
     box-sizing: border-box;
-    width: 400px;
+    width: 480px;
+    height: 550px;
     align-items: center;
     justify-content: space-between;
+    padding: 8px;
+    left: 100px;
 }
 
 .form-header {
     font-size: 36px;
     align-self: flex-start;
+    padding: 12px;
 }
 .event-form {
-    padding: 40px;
+    padding: 8px 40px 40px 40px;
+    // height: 500px;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    // justify-content: space-between;
+    // align-items: center;
+}
+
+.event-form-fields {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    // align-items: center;
+    box-sizing: border-box;
+    height: 450px;
+    margin: 18px;
 }
 
 .basic-info {
@@ -20,6 +41,7 @@
     flex-direction: column;
     justify-content: space-between;
     box-sizing: border-box;
+    height: 280px;
 }
 
 .basic-instructions {
@@ -35,4 +57,15 @@
     display: block;
     width: 100%;
     border: none;
+}
+
+.event-image, .location-container, .event-date {
+    height: 42px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.button-submit {
+    align-self: center;
 }
