--- a/app/assets/stylesheets/api/events.scss
+++ b/app/assets/stylesheets/api/events.scss
@@ -205,18 +205,32 @@
     width: 100%;
     height: 100%; 
 }
+// .loader {
+//     position: absolute;
+//     left: 50%;
+//     top: 35%;
+//     border: 16px solid #f3f3f3;
+//     border-top: 10px solid var(--main-orange);
+//     border-radius: 50%;
+//     z-index: 1000;
+//     width: 50px;
+//     height: 50px;
+//     animation: spin 2s linear infinite;
+// }
 .loader {
     position: absolute;
-    left: 50%;
-    top: 35%;
-    border: 16px solid #f3f3f3;
-    border-top: 10px solid var(--main-orange);
+    left: 44vw;
+    top: 40vh;
+    border: 15px solid #f3f3f3;
+    border-top: 16px solid var(--main-orange);
     border-radius: 50%;
-    z-index: 1000;
     width: 50px;
     height: 50px;
-    animation: spin 2s linear infinite;
-}
+    margin: 5px;
+    animation: spin 900ms linear infinite;
+    z-index: 1000;
+    // align-self: center;
+  }
 // .spinner {
 //     position: absolute;
 //     left: 44vw;
@@ -232,8 +246,8 @@
 //     // align-self: center;
 //   }
 @keyframes spin {
-    0% {transform: rotate(0deg);}
-    100% {transform: rotate(360deg);}
+    0% {-webkit-transform: rotate(0deg);}
+    100% {-webkit-transform: rotate(360deg);}
 }
 
 // .list-item {
