--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,6 +30,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.12/css/all.css" integrity="sha384-G0fIWCsCzJIMAVNQPfjH08cyYaUtMwjJwqiRKxxE/rx96Uroj1BtIQ6MLJuheaO9" crossorigin="anonymous">
   
     <%= favicon_link_tag 'temp-favicon-3.png' %> 
+    <script src="https://kit.fontawesome.com/538e86abf9.js" crossorigin="anonymous"></script>
   </head>
 
   <script>
