--- a/app/assets/stylesheets/nav.scss
+++ b/app/assets/stylesheets/nav.scss
@@ -3,7 +3,7 @@
     justify-content: space-between;
     align-items: center;
     height: 72px;
-    padding: 0px 30px;
+    padding: 0px 30px 0px 12px;
     box-sizing: border-box;
     box-shadow: 0px 0px 32px 12px rgba(0, 0, 0, 0.05);
 }
@@ -20,14 +20,21 @@
     display: flex;
     flex-direction: column;
     box-sizing: border-box;
+    justify-content: space-around;
+    box-sizing: border-box;
+    width: 190px;
 }
 
 .about-links {
     top: 3px;
+    box-sizing: border-box;
 }
 
 .about-links * {
-    color: rgb(56, 59, 59);
+    color: rgb(87, 90, 90);
+    padding: 1px;
+    font-size: 16px;
+    // margin-top: 8px;
 }
 
 .nav-links {
@@ -118,7 +125,8 @@
     font-family: "Neue plak";
     text-decoration: none;
     height: 58px;
-    // margin-top: -3px;
+    margin-top: -12px;
+    align-self: flex-end;
 }
 
 .header-group {
