Delete console log

--- a/app/assets/stylesheets/api/event_show.scss
+++ b/app/assets/stylesheets/api/event_show.scss
@@ -58,7 +58,7 @@
 }
 
 .rsvp-button {
-    min-width: 200px;
+    width: 100px;
     min-height: 40px;
     background-color: var(--main-orange);
     margin: 20px;
