--- a/app/assets/stylesheets/nav.scss
+++ b/app/assets/stylesheets/nav.scss
@@ -28,6 +28,7 @@
 .about-links {
     top: 3px;
     box-sizing: border-box;
+    height: 18px;
 }
 
 .about-links * {
@@ -36,6 +37,10 @@
     font-size: 16px;
     // margin-top: 8px;
 }
+
+.about-links *:hover {
+    color: rgb(157, 161, 161);
+} 
 
 .nav-links {
     display: flex;
@@ -124,9 +129,13 @@
     color: var(--main-orange);
     font-family: "Neue plak";
     text-decoration: none;
-    height: 58px;
-    margin-top: -12px;
+    height: 40px;
+    margin-top: -4px;
     align-self: flex-end;
+}
+
+.main-logo:hover {
+    color: var(--hover-orange);
 }
 
 .header-group {
