fix event show image

--- a/app/assets/stylesheets/api/event_show.scss
+++ b/app/assets/stylesheets/api/event_show.scss
@@ -19,6 +19,7 @@
     // border: 20px solid rgba(95, 23, 68, 0.349);
     // justify-content: center;
     margin-top: 40px;
+    max-height: 480px;
     width: 600px;
 }
 
@@ -28,26 +29,26 @@
     // background-size: contain;
     background-color: rgba(245, 243, 243, 0.89);
     // width: 400px;
+    max-height: 480px;
+    max-width: 600px;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
 .event-show-image {
-    height: 100%;
-    width: auto;
+    max-height: 480px;
+    max-width: 400px;
 }
 
 .top-side {
     // position: absolute;
-    // max-height: 500px;
     // width: 200px;
     box-sizing: border-box;
     padding: 30px;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    // display: block;
     background-color: rgba(245, 243, 243, 0.89);
 }
 
