--- a/app/assets/stylesheets/api/users.scss
+++ b/app/assets/stylesheets/api/users.scss
@@ -72,7 +72,8 @@
     flex-direction: column;
     align-items: center;
     width: 100%;
-    margin-top: 40px;
+    border-top: 1px solid lightgray;
+    padding-top: 40px;
 }
 
 .rsvp-feed {
