--- a/app/assets/stylesheets/api/event_show.scss
+++ b/app/assets/stylesheets/api/event_show.scss
@@ -20,18 +20,17 @@
     // border: 20px solid rgba(95, 23, 68, 0.349);
     // justify-content: center;
     margin-top: 40px;
-    max-height: 480px;
+    height: 40vh;
     width: 600px;
 }
 
 .top-img {
-    // max-height: 500px;
     // margin: 30px;
     // background-size: contain;
     background-color: rgba(179, 174, 174, 0.89);
-    // width: 400px;
-    max-height: 480px;
-    max-width: 400px;
+    // max-height: 480px;
+    // max-width: 400px;
+    height: 40vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -39,8 +38,10 @@
 }
 
 .event-show-image {
-    max-height: 480px;
-    max-width: 400px;
+    height: 100%;
+    // max-height: 480px;
+    // max-width: 400px;
+    object-fit: cover;
 }
 
 .top-side {
