--- a/app/assets/stylesheets/api/event_show.scss
+++ b/app/assets/stylesheets/api/event_show.scss
@@ -93,7 +93,8 @@
     display: flex;
     // flex-direction: column;
     // justify-content: space-between;
-    height: fit-content;
+    height: 50vh;
+    overflow: scroll;
     border-top: solid rgb(180, 180, 185) 1px;
     padding: 50px 30px 30px 30px;
     box-sizing: border-box;
