--- a/app/assets/stylesheets/api/events.scss
+++ b/app/assets/stylesheets/api/events.scss
@@ -214,10 +214,14 @@
     justify-content: space-between;
     width: 100%;
     height: 180px;
-    padding: 24px 16px;
+    padding: 16px 16px 24px 16px;
     box-sizing: border-box;
     overflow: hidden;
     background: white;
+}
+
+.event-item-body :first-child {
+    text-align: center;
 }
 
 .loader-container {
@@ -280,7 +284,6 @@
 }
 
 .event-item-title {
-    align-self: center;
     font-weight: bold;
     font-size: 1.2rem
 }
