--- a/app/assets/stylesheets/api/users.scss
+++ b/app/assets/stylesheets/api/users.scss
@@ -16,17 +16,17 @@
 }
 
 .profile-box {
-    min-height: 150px;
-    height: fit-content;
+    // min-height: 150px;
+    height: 60vh;
     box-sizing: border-box;
     overflow: auto;
-    padding-bottom: 50px;
+    // padding-bottom: 8vh;
     // max-height: fit-content;
     border-bottom: 1px solid lightgray;
 }
 
 .account-info {
-    // height: 10%;
+    // height: 55vh;
     display: flex;
     flex-direction: column;
     // justify-content: space-around;
@@ -47,7 +47,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
-    height: 30vh;
+    height: 40vh;
 }
 // .account-photo {
 //     height: 50%
